# sqd-hpc-py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
python/sqd_hpc_py/: __init__.py
src/: CMakeLists.txt
src/cpp/: module.cpp  sqd_sbd_binding.cpp
tutorials/: fcidump.txt  test.ipynb
